--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -88,6 +88,8 @@
                             <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Slave</button>
                             <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Master and Recover</button>
                             <button id="btn4" type="button" onclick="myfun4()" class="btn btn-default">Kill Slave and Recover</button>
+                            <button id="btn5" type="button" onclick="myfun5()" class="btn btn-info">echarts</button>
+
                         </div>
 
                     </form>
@@ -191,7 +193,7 @@
             $("#log-container").scrollTop($("#log-container div").height() - $("#log-container").height());
         };
     }
-    
+
     function myfun5() {
 
         $.ajax({
