--- a/src/main/resources/templates/mysql.html
+++ b/src/main/resources/templates/mysql.html
@@ -125,143 +125,218 @@
                         </div>
 
                         <div class="btn-group">
-                            <button id="btn1" type="button" onclick="myfun1()" class="btn btn-default">Kill Node</button>
-                            <button id="btn4" type="button" onclick="myfun2()" class="btn btn-default">Kill Node and Recover</button>
-                        </div>
-
-
-
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Result
-                            </div>
-
-                            <div id="table_refresh" style="height:400px;overflow:auto; position: relative;weight:1200px" th:fragment="table_refresh"
-                                 data-spy="scroll" data-target="#navbar-example" data-offset="0">
-                                <span th:text="${pwdresult}" ></span>
-                            </div>
+                            <button id="btn1" type="button" onclick="myfun1()" class="btn btn-default">Kill Data</button>
+                            <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Data and Recover</button>
+                            <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Cooridinator</button>
+                            <button id="btn4" type="button" onclick="myfun4()" class="btn btn-default">Kill Coordinator and Recover</button>
+                            <button id="btn5" type="button" onclick="myfun5()" class="btn btn-info">echarts</button>
 
                         </div>
                     </form>
-                    <script>
-
-
-                        function myfun2() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/mysql/crash?id=2",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myfun1() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/mysql/crash?id=1",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myRun() {
-
-                            $('#table_refresh').load("/database/mysql/run");
-
-                        }
-                    </script>
-
-                    <!--script>
-                        layui.use(['form', 'layedit', 'laydate'], function(){
-                            var form = layui.form
-                                ,layer = layui.layer
-                                ,layedit = layui.layedit
-                                ,laydate = layui.laydate;
-
-                            //日期
-                            laydate.render({
-                                elem: '#date'
-                            });
-                            laydate.render({
-                                elem: '#date1'
-                            });
-
-                            //创建一个编辑器
-                            var editIndex = layedit.build('LAY_demo_editor');
-
-                            //自定义验证规则
-                            form.verify({
-                                title: function(value){
-                                    if(value.length < 5){
-                                        return '标题至少得5个字符啊';
-                                    }
-                                }
-                                ,pass: [
-                                    /^[\S]{6,12}$/
-                                    ,'密码必须6到12位，且不能出现空格'
-                                ]
-                                ,content: function(value){
-                                    layedit.sync(editIndex);
-                                }
-                            });
-
-                            //监听指定开关
-                            form.on('switch(switchTest)', function(data){
-                                layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
-                                    offset: '6px'
-                                });
-                                layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
-                            });
-
-                            //监听提交
-                            form.on('submit(demo1)', function(data){
-                                $.ajax({
-                                    url: '/database/mongo',
-                                    async:false,
-
-                                    success: function(data){
-                                    }
-                                });
-                                layer.msg("save success !",{icon:6});
-                            });
-
-                            //表单赋值
-                            layui.$('#LAY-component-form-setval').on('click', function(){
-                                form.val('example', {
-                                    "username": "贤心" // "name": "value"
-                                    ,"password": "123456"
-                                    ,"interest": 1
-                                    ,"like[write]": true //复选框选中状态
-                                    ,"close": true //开关状态
-                                    ,"sex": "女"
-                                    ,"desc": "我爱 layui"
-                                });
-                            });
-
-                            //表单取值
-                            layui.$('#LAY-component-form-getval').on('click', function(){
-                                var data = form.val('example');
-                                alert(JSON.stringify(data));
-                            });
-
-                        });
-                    </script-->
-
-
-
-
                 </div>
             </div>
+
+
+
+            <div class="layui-row>">
+                <div class="layui-col-lg11" >
+
+                    <div class="panel panel-default" style="margin-top: 5px;">
+                        <div class="panel-heading">Log</div>
+                        <div id="log-container" style="height:400px;overflow-y:scroll; position: relative;weight:1000px" data-offset="10">
+                            <div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="nav nav-list"><li class="divider"></li></ul>
+                    <div  id="echarts"  style="width: 900px;height:500px;"></div>
+                </div>
+            </div>
+
+
+
+
+
+
+
         </div>
     </div>
     <!--底部-->
     <div th:replace="fragments/footer :: footer"></div>
 </div>
+
+<script type="text/javascript" th:inline="none">
+
+    function myfun4() {
+        $.ajax({
+            type:"get",
+            url:"/database/postgres/crash?id=4",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun3() {
+        $.ajax({
+            type:"get",
+            url:"/database/postgres/crash?id=3",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+
+    function myfun2() {
+        $.ajax({
+            type:"get",
+            url:"/database/mysql/crash?id=2",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun1() {
+        $.ajax({
+            type:"get",
+            url:"/database/mysql/crash?id=1",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myRun() {
+
+        $.ajax({
+            type:"get",
+            url:"/database/mysql/run",
+            success:function(data){
+                console.log("mysql run script success")
+            },error:function(e){
+                console.log(e+",,mysql run script error")
+            }
+        })
+        var websocket = new WebSocket('ws://39.104.154.79:8082/log');
+        websocket.onmessage = function(event) {
+            // 接收服务端的实时日志并添加到HTML页面中
+            $("#log-container div").append(event.data);
+            // 滚动条滚动到最低部
+            $("#log-container").scrollTop($("#log-container div").height() - $("#log-container").height());
+        };
+    }
+
+    function myfun5() {
+
+        $.ajax({
+            type:"get",
+            url:"/echarts",
+            dataType:"json",
+            success: function (data) {
+                var echartsData =[['time'],['exception'],['violation']];
+
+                for (var i = 0; i < data.length; i++) {
+                    echartsData[0].push(data[i].tm);
+                    echartsData[1].push(data[i].excp);
+                    echartsData[2].push(data[i].vio);
+                }
+
+                var myChart = echarts.init(document.getElementById('echarts'));
+                myChart.clear();
+                var option = {
+
+                    legend: {},
+                    tooltip: {
+                        trigger: 'axis',
+                        showContent: false
+                    },
+                    dataset: {
+                        source: echartsData
+                    },
+                    xAxis: {
+                        type: 'category',
+                        name: 'Time'
+                    },
+                    yAxis: {
+                        gridIndex: 0,
+                        name: 'Number',
+                    },
+                    grid: {top: '55%'},
+                    series: [
+                        {type: 'line', smooth: true, seriesLayoutBy: 'row'},
+                        {type: 'line', smooth: true, seriesLayoutBy: 'row'},
+                        {
+                            type: 'pie',
+                            id: 'pie',
+                            radius: '30%',
+                            center: ['50%', '25%'],
+                            label: {
+                                formatter: '{b}: {@2012} ({d}%)'
+                            },
+                            encode: {
+                                itemName: 'time',
+                                value: '2012',
+                                tooltip: '2012'
+                            }
+                        }
+                    ]
+                };
+
+                myChart.on('updateAxisPointer', function (event) {
+                    var xAxisInfo = event.axesInfo[0];
+                    if (xAxisInfo) {
+                        var dimension = xAxisInfo.value + 1;
+                        myChart.setOption({
+                            series: {
+                                id: 'pie',
+                                label: {
+                                    formatter: '{b}: {@[' + dimension + ']} ({d}%)'
+                                },
+                                encode: {
+                                    value: dimension,
+                                    tooltip: dimension
+                                }
+                            }
+                        });
+                    }
+                });
+
+                myChart.setOption(option);
+
+            }
+            ,
+            error:function (XMLHttpRequest, textStatus, errorThrown) {
+                console.log("错误");
+                // 状态码
+                console.log(XMLHttpRequest.status);
+                // 状态
+                console.log(XMLHttpRequest.readyState);
+                // 错误信息
+                console.log(textStatus);
+
+            }
+        });
+    }
+
+
+
+
+
+
+
+
+
+</script>
 </body>
 </html>
