--- a/src/main/resources/templates/redis.html
+++ b/src/main/resources/templates/redis.html
@@ -178,86 +178,209 @@
                             <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Slave</button>
                             <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Master and Recover</button>
                             <button id="btn4" type="button" onclick="myfun4()" class="btn btn-default">Kill Slave and Recover</button>
-                        </div>
-
-
-
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                Result
-                            </div>
-
-                            <div id="table_refresh" style="height:400px;overflow:auto; position: relative;weight:1200px" th:fragment="table_refresh"
-                                 data-spy="scroll" data-target="#navbar-example" data-offset="0">
-                                <span th:text="${pwdresult}" ></span>
-                            </div>
+                            <button id="btn5" type="button" onclick="myfun5()" class="btn btn-info">echarts</button>
 
                         </div>
                     </form>
-                    <script>
-
-                        function myfun4() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/redis/crash?id=4",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myfun3() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/redis/crash?id=3",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myfun2() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/redis/crash?id=2",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myfun1() {
-                            $.ajax({
-                                type:"get",
-                                url:"/database/redis/crash?id=1",
-                                success:function (data) {
-                                    alert("success");
-                                },
-                                error:function () {
-                                    alert("error");
-                                }
-                            });
-                        }
-                        function myRun() {
-
-                            $('#table_refresh').load("/database/redis/run");
-
-                        }
-                    </script>
-
-
                 </div>
             </div>
+
+
+            <div class="layui-row>">
+                <div class="layui-col-lg11" >
+
+                    <div class="panel panel-default" style="margin-top: 5px;">
+                        <div class="panel-heading">Log</div>
+                        <div id="log-container" style="height:400px;overflow-y:scroll; position: relative;weight:1000px" data-offset="10">
+                            <div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="nav nav-list"><li class="divider"></li></ul>
+                    <div  id="echarts"  style="width: 900px;height:500px;"></div>
+                </div>
+            </div>
+
+
+
         </div>
     </div>
     <!--底部-->
     <div th:replace="fragments/footer :: footer"></div>
 </div>
+
+<script type="text/javascript" th:inline="none">
+
+
+    function myfun4() {
+        $.ajax({
+            type:"get",
+            url:"/database/cassandra/crash?id=4",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun3() {
+        $.ajax({
+            type:"get",
+            url:"/database/cassandra/crash?id=3",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun2() {
+        $.ajax({
+            type:"get",
+            url:"/database/cassandra/crash?id=2",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myfun1() {
+        $.ajax({
+            type:"get",
+            url:"/database/cassandra/crash?id=1",
+            success:function (data) {
+                alert("success");
+            },
+            error:function () {
+                alert("error");
+            }
+        });
+    }
+    function myRun() {
+
+        $.ajax({
+            type:"get",
+            url:"/database/cassandra/run",
+            success:function(data){
+                console.log("cassandra run script success")
+            },error:function(e){
+                console.log(e+",,cassandra run script error")
+            }
+        })
+        var websocket = new WebSocket('ws://39.104.154.79:8082/log');
+        websocket.onmessage = function(event) {
+            // 接收服务端的实时日志并添加到HTML页面中
+            $("#log-container div").append(event.data);
+            // 滚动条滚动到最低部
+            $("#log-container").scrollTop($("#log-container div").height() - $("#log-container").height());
+        };
+    }
+
+    function myfun5() {
+
+        $.ajax({
+            type:"get",
+            url:"/echarts",
+            dataType:"json",
+            success: function (data) {
+                var echartsData =[['time'],['exception'],['violation']];
+
+                for (var i = 0; i < data.length; i++) {
+                    echartsData[0].push(data[i].tm);
+                    echartsData[1].push(data[i].excp);
+                    echartsData[2].push(data[i].vio);
+                }
+
+                var myChart = echarts.init(document.getElementById('echarts'));
+                myChart.clear();
+                var option = {
+
+                    legend: {},
+                    tooltip: {
+                        trigger: 'axis',
+                        showContent: false
+                    },
+                    dataset: {
+                        source: echartsData
+                    },
+                    xAxis: {
+                        type: 'category',
+                        name: 'Time'
+                    },
+                    yAxis: {
+                        gridIndex: 0,
+                        name: 'Number',
+                    },
+                    grid: {top: '55%'},
+                    series: [
+                        {type: 'line', smooth: true, seriesLayoutBy: 'row'},
+                        {type: 'line', smooth: true, seriesLayoutBy: 'row'},
+                        {
+                            type: 'pie',
+                            id: 'pie',
+                            radius: '30%',
+                            center: ['50%', '25%'],
+                            label: {
+                                formatter: '{b}: {@2012} ({d}%)'
+                            },
+                            encode: {
+                                itemName: 'time',
+                                value: '2012',
+                                tooltip: '2012'
+                            }
+                        }
+                    ]
+                };
+
+                myChart.on('updateAxisPointer', function (event) {
+                    var xAxisInfo = event.axesInfo[0];
+                    if (xAxisInfo) {
+                        var dimension = xAxisInfo.value + 1;
+                        myChart.setOption({
+                            series: {
+                                id: 'pie',
+                                label: {
+                                    formatter: '{b}: {@[' + dimension + ']} ({d}%)'
+                                },
+                                encode: {
+                                    value: dimension,
+                                    tooltip: dimension
+                                }
+                            }
+                        });
+                    }
+                });
+
+                myChart.setOption(option);
+
+            }
+            ,
+            error:function (XMLHttpRequest, textStatus, errorThrown) {
+                console.log("错误");
+                // 状态码
+                console.log(XMLHttpRequest.status);
+                // 状态
+                console.log(XMLHttpRequest.readyState);
+                // 错误信息
+                console.log(textStatus);
+
+            }
+        });
+    }
+
+
+
+
+
+
+
+
+
+</script>
 </body>
 </html>
