--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -108,7 +108,7 @@
                         </div>
 
                         <div class="btn-group">
-                            <button type="button" class="btn  btn-danger">Stop</button>
+                            <!--button type="button" class="btn  btn-danger">Stop</button-->
                             <button id="btn1" type="button" onclick="myfun1()" class="btn btn-default">Kill Coordinator</button>
                             <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Data</button>
 
