--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -83,7 +83,7 @@
 
 
                         <div class="btn-group">
-                            <button type="button"  class="btn  btn-danger">Stop</button>
+                            <!--button type="button"  class="btn  btn-danger">Stop</button-->
                             <button id="btn1" type="button" onclick="myfun1()" class="btn btn-default">Kill Master</button>
                             <button id="btn2" type="button" onclick="myfun2()" class="btn btn-default">Kill Slave</button>
                             <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Master and Recover</button>
