--- a/src/main/resources/templates/cassandra.html
+++ b/src/main/resources/templates/cassandra.html
@@ -115,7 +115,7 @@
                             <button id="btn3" type="button" onclick="myfun3()" class="btn btn-default">Kill Coordinator and Recover</button>
                             <button id="btn4" type="button" onclick="myfun4()" class="btn btn-default">Kill Data and Recover</button>
 
-                            <button id="btn5" type="button" onclick="myfun5()" class="btn btn-default">echarts</button>
+                            <button id="btn5" type="button" onclick="myfun5()" class="btn btn-info">echarts</button>
 
                         </div>
                     </form>
