--- a/src/main/resources/templates/hbase.html
+++ b/src/main/resources/templates/hbase.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:required="http://www.w3.org/1999/xhtml">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml">
-
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <!--head部分-->
 <head th:include="layout :: htmlhead" th:with="title='CausalTest Management'">
 </head>
@@ -18,7 +17,6 @@
                     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
                         <legend>HBase</legend>
                     </fieldset>
-
                     <form class="form-horizontal" role="form" action="/database/hbase" method="get">
                         <div class="form-group" >
                             <label for="website" class="col-sm-2 control-label">Website</label>
@@ -102,11 +100,11 @@
 
                     <div class="panel panel-default" style="margin-top: 5px;">
                         <div class="panel-heading">Log</div>
-                        <div id="log-container" style="height:400px;overflow-y:scroll; position: relative;weight:1000px" data-offset="10">
-                            <div>
+                            <div id="log-container" style="height:400px;overflow-y:scroll; position: relative;weight:1000px" data-offset="10">
+                                <div>
 
+                                </div>
                             </div>
-                        </div>
                     </div>
                     <ul class="nav nav-list"><li class="divider"></li></ul>
                     <div  id="echarts"  style="width: 900px;height:500px;"></div>
@@ -124,7 +122,7 @@
 
 
 
-<script type="text/javascript">
+<script type="text/javascript" th:inline="none">
 
     function myfun4() {
         $.ajax({
